--- a/WolvenKit/MVVM/Views/Shell/Editor/ProjectExplorerView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Editor/ProjectExplorerView.xaml
@@ -5,13 +5,13 @@
  xmlns:behavior="clr-namespace:WolvenKit.Functionality.Behavior"
  xmlns:c="clr-namespace:WolvenKit.Functionality.WKitGlobal.Helpers"
  xmlns:catel="http://schemas.catelproject.com"
- xmlns:converters="clr-namespace:WolvenKit.Functionality.Layout.Converters"
  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
  xmlns:hc="https://handyorg.github.io/handycontrol"
  xmlns:i1="http://schemas.microsoft.com/xaml/behaviors"
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
  xmlns:model="clr-namespace:WolvenKit.MVVM.Model"
  xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
+ xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters"
  d:DesignHeight="450"
  d:DesignWidth="800"
  IsVisibleChanged="UserControl_IsVisibleChanged"
@@ -28,9 +28,9 @@
         </ResourceDictionary>
     </catel:UserControl.Resources>
 
-    <Grid xmlns:conv="clr-namespace:WolvenKit.Functionality.Layout.Converters" hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}">
+    <Grid hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}">
         <Grid.Resources>
-            <conv:ExtensionToImageConverter x:Key="ExtensionToImageConverter" />
+            <converters:ExtensionToImageConverter x:Key="ExtensionToImageConverter" />
         </Grid.Resources>
 
         <Grid VerticalAlignment="Top">
