--- a/WolvenKit/MVVM/Views/Shell/Editor/DocumentView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Editor/DocumentView.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
     xmlns:behavior="clr-namespace:WolvenKit.Functionality.Behavior"
@@ -12,9 +11,9 @@
     xmlns:cmodel="clr-namespace:WolvenKit.MVVM.ViewModels.Shell.Editor"
     xmlns:types="clr-namespace:WolvenKit.Common.Model.Cr2w;assembly=WolvenKit.Common"
     xmlns:cr2W="clr-namespace:WolvenKit.CR2W;assembly=WolvenKit.CR2W"
-    xmlns:conv="clr-namespace:WolvenKit.Functionality.Layout.Converters"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:propertyGridEditors="clr-namespace:WolvenKit.MVVM.Views.PropertyGridEditors"
+    xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d" IsVisibleChanged="UserControl_IsVisibleChanged">
@@ -29,7 +28,7 @@
 
     <Grid hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}">
         <Grid.Resources>
-            <conv:ExtensionToImageConverter x:Key="ExtensionToImageConverter" />
+            <converters:ExtensionToImageConverter x:Key="ExtensionToImageConverter" />
         </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="308" />
@@ -133,7 +132,9 @@
         <Grid Grid.Column="2">
             <hc:PropertyGrid
                 PropertyResolver="{Binding PropertyResolver }"
-                SelectedObject="{Binding SelectedChunk.Data}">
+                SelectedObject="{Binding SelectedChunk.Data}"
+                
+                >
             </hc:PropertyGrid>
         </Grid>
     </Grid>
