--- a/WolvenKit/MVVM/Views/Shell/Editor/LogView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Editor/LogView.xaml
@@ -4,6 +4,8 @@
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:catel="http://schemas.catelproject.com"
  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+ xmlns:hc="https://handyorg.github.io/handycontrol"
+ xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
  xmlns:orclogviewer="http://schemas.wildgums.com/orc/logviewer"
  xmlns:orclogviewer1="http://schemas.wildgums.com/orc/controls"
@@ -19,11 +21,17 @@
         <Geometry x:Key="LogErrorGeometry">M2,21.9997L12,2.00026L20.6247,19.2199L20.6291,19.2199L22,21.9997L22,21.9997L22,21.9997L2,21.9997ZM5.0287,19.9997L18.9638,19.9997L12,6.11526L5.0287,19.9997ZM12.9376,16.5456L11.2947,16.5456L11.2947,18.2081L12.9376,18.2081L12.9376,16.5456ZM12.9376,11.5581L11.2947,11.5581L11.2947,14.8831L12.9376,14.8831L12.9376,11.5581Z</Geometry>
         <Geometry x:Key="LogInfoGeometry">M11,9L13,9L13,7L11,7M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2C6.51416,2 2,6.51416 2,12C2,17.4858 6.51416,22 12,22C17.4858,22 22,17.4858 22,12C22,6.51416 17.4858,2 12,2M11,17L13,17L13,11L11,11L11,17Z</Geometry>
         <Geometry x:Key="LogClockGeometry">M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C6.47,22 2,17.5 2,12A10,10 0 0,1 12,2M12.5,7V12.25L17,14.92L16.25,16.15L11,13V7H12.5Z</Geometry>
+        <Geometry x:Key="PaintRoller">M768 874.667h-469.333c-47.061 0-85.333-38.272-85.333-85.333v-128c0-47.061 38.272-85.333 85.333-85.333h469.333c47.061 0 85.333 38.272 85.333 85.333v128c0 47.061-38.272 85.333-85.333 85.333zM298.667 661.333v128h469.333l0.085-128h-469.419zM554.667 320v85.333c0 47.061-38.272 85.333-85.333 85.333h-298.667v256c-47.061 0-85.333-38.272-85.333-85.333v-170.667c0-47.061 38.272-85.333 85.333-85.333h298.667v-85.333c-23.595 0-42.667-19.072-42.667-42.667v-213.333c0-23.595 19.072-42.667 42.667-42.667h85.333c23.595 0 42.667 19.072 42.667 42.667v213.333c0 23.595-19.072 42.667-42.667 42.667z</Geometry>
+
 
     </catel:UserControl.Resources>
 
 
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
+        </Grid.RowDefinitions>
 
         <orclogviewer1:LogViewerControl
          x:Name="LogRichTextBox"
@@ -37,7 +45,7 @@
          EnableTimestamp="True"
          ErrorMessageBrush="Red"
          IgnoreCatelLogging="True"
-         InfoMessageBrush="{DynamicResource MahApps.Brushes.SystemControlBackgroundAccent}"
+         InfoMessageBrush="White"
          ScrollMode="AutoScrollPriority"
          ShowDebug="False"
          ShowError="False"
@@ -48,6 +56,7 @@
          />
 
         <StackPanel
+         Grid.Row="1"
          Margin="0,0,15,0"
          HorizontalAlignment="Right"
          VerticalAlignment="Bottom"
@@ -55,11 +64,24 @@
          Visibility="Visible"
          >
             <Button
+             hc:IconElement.Geometry="{StaticResource PaintRoller}"
              BorderThickness="1"
              Click="Button_Click"
-             Content="Clear"
-             Style="{DynamicResource MahApps.Styles.Button.Chromeless}"
-             />
+             Style="{StaticResource ButtonIcon}"
+             >
+                <Button.RenderTransform>
+                    <RotateTransform Angle="180" CenterX="20" CenterY="15" />
+
+                </Button.RenderTransform>
+            </Button>
+
+            <Button
+             BorderThickness="1"
+             Click="Button_Click"
+             Style="{StaticResource MahApps.Styles.Button.Chromeless}"
+             >
+                <iconPacks:PackIconCodicons Kind="ClearAll" Width="25" Height="25" />
+            </Button>
         </StackPanel>
 
 
