--- a/WolvenKit/MVVM/Views/Shell/HomePage/HomePageView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/HomePage/HomePageView.xaml
@@ -2,14 +2,12 @@
  x:Class="WolvenKit.MVVM.Views.Shell.HomePage.HomePageView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- xmlns:Fluent="urn:fluent-ribbon"
- xmlns:HPPage="clr-namespace:WolvenKit.MVVM.Views.Shell.HomePage.Pages"
- xmlns:Mid="clr-namespace:WolvenKit.MVVM.Views.Shell.HomePage"
  xmlns:av="http://schemas.microsoft.com/expression/blend/2008"
  xmlns:catel="http://schemas.catelproject.com"
  xmlns:hc="https://handyorg.github.io/handycontrol"
  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+ xmlns:pages="clr-namespace:WolvenKit.MVVM.Views.Shell.HomePage.Pages"
  mc:Ignorable="av"
  >
 
@@ -358,7 +356,76 @@
              >
                 <hc:TransitioningContentControl TransitionMode="Left2RightWithFade">
                     <Grid>
-                        <Grid x:Name="PageViewGrid" Margin="0" />
+                        <Grid
+                         x:Name="AboutPage"
+                         Margin="0"
+                         Visibility="{Binding AboutPV, Converter={StaticResource Boolean2VisibilityConverter}}"
+                         >
+                            <pages:AboutPageView />
+                        </Grid>
+                        <Grid
+                         x:Name="DebugPage"
+                         Margin="0"
+                         Visibility="{Binding DebugPV, Converter={StaticResource Boolean2VisibilityConverter}}"
+                         >
+                            <pages:DebugPageView />
+                        </Grid>
+                        <Grid
+                         x:Name="GithubPage"
+                         Margin="0"
+                         Visibility="{Binding GithubPV, Converter={StaticResource Boolean2VisibilityConverter}}"
+                         >
+                            <pages:GithubPageView />
+                        </Grid>
+                        <Grid
+                         x:Name="IntegratedToolsPage"
+                         Margin="0"
+                         Visibility="{Binding IntegratedTPV, Converter={StaticResource Boolean2VisibilityConverter}}"
+                         >
+                            <pages:IntegratedToolsPageView />
+                        </Grid>
+                        <Grid
+                         x:Name="RecentProjectPage"
+                         Margin="0"
+                         Visibility="{Binding RecentPV, Converter={StaticResource Boolean2VisibilityConverter}}"
+                         >
+                            <pages:RecentProjectView />
+                        </Grid>
+                        <Grid
+                         x:Name="SettingsPage"
+                         Margin="0"
+                         Visibility="{Binding SettingsPV, Converter={StaticResource Boolean2VisibilityConverter}}"
+                         >
+                            <pages:SettingsPageView />
+                        </Grid>
+                        <Grid
+                         x:Name="UserPage"
+                         Margin="0"
+                         Visibility="{Binding UserPV, Converter={StaticResource Boolean2VisibilityConverter}}"
+                         >
+                            <pages:UserPageView />
+                        </Grid>
+                        <Grid
+                         x:Name="WebsitePage"
+                         Margin="0"
+                         Visibility="{Binding WebsitePV, Converter={StaticResource Boolean2VisibilityConverter}}"
+                         >
+                            <pages:WebsitePageView />
+                        </Grid>
+                        <Grid
+                         x:Name="WelcomePage"
+                         Margin="0"
+                         Visibility="{Binding WelcomePV, Converter={StaticResource Boolean2VisibilityConverter}}"
+                         >
+                            <pages:WelcomePageView />
+                        </Grid>
+                        <Grid
+                         x:Name="WikiPage"
+                         Margin="0"
+                         Visibility="{Binding WikitPV, Converter={StaticResource Boolean2VisibilityConverter}}"
+                         >
+                            <pages:WikiPageView />
+                        </Grid>
                         <Button
                          x:Name="PageCloseButton"
                          Margin="25,25,0,0"
@@ -368,7 +435,7 @@
                          BorderBrush="Transparent"
                          Command="{Binding ClosePage}"
                          Style="{DynamicResource MahApps.Styles.Button.Chromeless}"
-                         Visibility="Hidden"
+                         Visibility="{Binding ReturnButtonVisibile, Converter={StaticResource boolToVisibilityConverter}}"
                          >
                             <iconPacks:PackIconCodicons
                              Width="25"
@@ -434,7 +501,7 @@
              Margin="25,-5,0,3"
              Background="Transparent"
              BorderBrush="Transparent"
-             Command="{Binding CloseWkit}"
+             Command="hc:ControlCommands.ShutdownApp"
              Style="{DynamicResource MahApps.Styles.Button.Chromeless}"
              >
                 <iconPacks:PackIconCodicons
