Project Fixes Big revert in progress tho

--- a/WolvenKit/MVVM/Views/Components/Tools/AssetBrowserView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Tools/AssetBrowserView.xaml
@@ -6,10 +6,10 @@
  xmlns:c="clr-namespace:WolvenKit.Functionality.WKitGlobal.Helpers"
  xmlns:catel="http://schemas.catelproject.com"
  xmlns:controls1="clr-namespace:WolvenKit.AssetBrowserBar.Controls;assembly=WolvenKit.AssetBrowserBar"
+ xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters"
  xmlns:hc="https://handyorg.github.io/handycontrol"
  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
  xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
- xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters"
  BorderBrush="{x:Null}"
  IsVisibleChanged="DataWindow_IsVisibleChanged"
  >
@@ -21,10 +21,7 @@
                 <hc:ThemeResources />
                 <hc:Theme />
             </ResourceDictionary.MergedDictionaries>
-            <c:ValueConverterGroup x:Key="ConvertExtensionAndSVGz">
-                <converters:ExtensionToImageConverter />
-                <svgc:SvgImageConverter />
-            </c:ValueConverterGroup>
+
 
             <Style TargetType="ListViewItem">
                 <Setter Property="HorizontalContentAlignment" Value="Stretch" />
@@ -51,7 +48,7 @@
                     <ColumnDefinition Width="4*" />
                 </Grid.ColumnDefinitions>
 
-                <Grid xmlns:conv="clr-namespace:WolvenKit.Functionality.Layout.Converters" Grid.Column="0">
+                <Grid Grid.Column="0">
                     <Grid.Resources>
                         <converters:ExtensionToImageConverter x:Key="ExtensionToImageConverter" />
                     </Grid.Resources>
@@ -124,7 +121,6 @@
                         <hc:TabItem Header="Depot">
                             <!--  Bind Header to selected item in treeview  -->
                             <ListView
-                             xmlns:conv="clr-namespace:WolvenKit.Functionality.Layout.Converters"
                              x:Name="InnerList"
                              Background="Transparent"
                              BorderBrush="{DynamicResource MahApps.Brushes.Accent4}"
