--- a/WolvenKit/Views/Editor/Basic/ImportView.xaml
+++ b/WolvenKit/Views/Editor/Basic/ImportView.xaml
@@ -4,7 +4,7 @@
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:behavior="clr-namespace:WolvenKit.Functionality.Behavior"
  xmlns:catel="http://schemas.catelproject.com"
- xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters"
+ xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters;assembly=WolvenKit.App"
  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
  xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
  xmlns:hc="https://handyorg.github.io/handycontrol"
