--- a/WolvenKit/Views/Editor/Documents/DocumentView.xaml
+++ b/WolvenKit/Views/Editor/Documents/DocumentView.xaml
@@ -5,7 +5,7 @@
  xmlns:behavior="clr-namespace:WolvenKit.Functionality.Behavior"
  xmlns:catel="http://schemas.catelproject.com"
  xmlns:cmodel="clr-namespace:WolvenKit.MVVM.ViewModels.Shell.Editor;assembly=WolvenKit.App"
- xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters"
+ xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters;assembly=WolvenKit.App"
  xmlns:cr2W="clr-namespace:WolvenKit.CR2W;assembly=WolvenKit.CR2W"
  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
  xmlns:ei="http://schemas.microsoft.com/xaml/behaviors"
