--- a/WolvenKit/Views/HomePage/HomePageView.xaml
+++ b/WolvenKit/Views/HomePage/HomePageView.xaml
@@ -463,7 +463,7 @@
              Margin="25,-5,25,3"
              Background="Transparent"
              BorderBrush="Transparent"
-             Command="{Binding MinimizeWkit}"
+             Command="{Binding MinimizeWindow}"
              Style="{DynamicResource MahApps.Styles.Button.Chromeless}"
              >
                 <iconPacks:PackIconCodicons
@@ -482,7 +482,7 @@
              Margin="25,-5,25,3"
              Background="Transparent"
              BorderBrush="Transparent"
-             Command="{Binding RestoreWkit}"
+             Command="{Binding RestoreWindow}"
              Style="{DynamicResource MahApps.Styles.Button.Chromeless}"
              >
                 <iconPacks:PackIconCodicons
