--- a/WolvenKit/Views/HomePage/Pages/CyberCATPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/CyberCATPageView.xaml
@@ -1,5 +1,5 @@
 <catel:UserControl
- x:Class="WolvenKit.MVVM.Views.Shell.Homepage.Pages.IntegratedToolsPages.CyberCAT.CyberCATPageView"
+ x:Class="WolvenKit.Views.HomePage.Pages.CyberCATPageView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:catel="http://schemas.catelproject.com"
