--- a/WolvenKit/Views/HomePage/Pages/GeneralSettingsView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/GeneralSettingsView.xaml
@@ -1,10 +1,10 @@
 <catel:UserControl
- x:Class="WolvenKit.MVVM.Views.Shell.HomePage.Pages.SettingsPages.GeneralSettingsView"
+ x:Class="WolvenKit.Views.HomePage.Pages.GeneralSettingsView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:catel="http://schemas.catelproject.com"
  xmlns:hc="https://handyorg.github.io/handycontrol"
- xmlns:sp="clr-namespace:WolvenKit.MVVM.Views.Shell.HomePage.Pages.SettingsPages.SubPages.General"
+ xmlns:sp="clr-namespace:WolvenKit.Views.HomePage.Pages"
  IsVisibleChanged="UserControl_IsVisibleChanged"
  >
 
