--- a/WolvenKit/Views/HomePage/Pages/SettingsPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/SettingsPageView.xaml
@@ -1,11 +1,11 @@
 <catel:UserControl
- x:Class="WolvenKit.MVVM.Views.Shell.HomePage.Pages.SettingsPageView"
+ x:Class="WolvenKit.Views.HomePage.Pages.SettingsPageView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:catel="http://schemas.catelproject.com"
  xmlns:hc="https://handyorg.github.io/handycontrol"
  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
- xmlns:sp="clr-namespace:WolvenKit.MVVM.Views.Shell.HomePage.Pages.SettingsPages"
+ xmlns:sp="clr-namespace:WolvenKit.Views.HomePage.Pages"
  >
 
     <Grid
