--- a/WolvenKit/Views/HomePage/Pages/ToolSettingsView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/ToolSettingsView.xaml
@@ -1,5 +1,5 @@
 <catel:UserControl
- x:Class="WolvenKit.MVVM.Views.Shell.HomePage.Pages.SettingsPages.ToolSettingsView"
+ x:Class="WolvenKit.Views.HomePage.Pages.ToolSettingsView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:catel="http://schemas.catelproject.com"
