--- a/WolvenKit/Views/HomePage/Pages/WebsitePageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/WebsitePageView.xaml
@@ -1,10 +1,10 @@
 <catel:UserControl
- x:Class="WolvenKit.MVVM.Views.Shell.HomePage.Pages.IntegratedToolsPageView"
+ x:Class="WolvenKit.Views.HomePage.Pages.WebsitePageView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:catel="http://schemas.catelproject.com"
  xmlns:hc="https://handyorg.github.io/handycontrol"
- xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+ xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
  >
 
     <Grid
@@ -17,26 +17,9 @@
         <Grid Margin="3,75,3,0">
             <hc:TransitioningContentControl TransitionMode="Right2LeftWithFade">
 
-                <hc:TabControl
-                 x:Name="TabControlDemo"
-                 Margin="0,0,0,0"
-                 IsAnimationEnabled="True"
-                 IsDraggable="False"
-                 IsTabFillEnabled="True"
-                 ShowCloseButton="False"
-                 >
-                    <hc:TabItem x:Name="GeneralTabItem" IsSelected="True">
-                        <hc:TabItem.Header>
-                            <StackPanel Orientation="Horizontal">
-                                <iconPacks:PackIconCodicons Kind="VM" />
-                                <TextBlock Margin="10,0,0,0" Text="CyberCAT" />
-                            </StackPanel>
-                        </hc:TabItem.Header>
-                    </hc:TabItem>
-                </hc:TabControl>
+                <wv2:WebView2 Source="https://redmodding.org/" />
             </hc:TransitioningContentControl>
         </Grid>
-
         <hc:TransitioningContentControl TransitionMode="Right2LeftWithFade">
 
             <StackPanel
@@ -45,12 +28,11 @@
              VerticalAlignment="Top"
              Orientation="Horizontal"
              >
-
                 <TextBlock
+                 Margin="0"
                  HorizontalAlignment="Center"
                  VerticalAlignment="Center "
                  FontSize="20"
-                 Text="Integrated tools"
                  />
                 <hc:Divider
                  Height="45"
@@ -62,21 +44,42 @@
                 <hc:AnimationPath
                  Width="45"
                  Height="45"
-                 Margin="5"
-                 HorizontalAlignment="Center"
-                 VerticalAlignment="Center"
-                 Data="{DynamicResource IntegratedGeo}"
-                 PathLength="105"
+                 Data="{DynamicResource WikiGeo}"
+                 PathLength="250"
+                 RenderTransformOrigin="0.5,0.5"
                  Stretch="Uniform"
                  Stroke="{DynamicResource MahApps.Brushes.ThemeForeground}"
                  StrokeThickness="1.5"
-                 Duration="00:00:06"
+                 Duration="00:00:08"
                  >
-                    <hc:AnimationPath.LayoutTransform>
-                        <ScaleTransform ScaleY="-1" />
-                    </hc:AnimationPath.LayoutTransform>
+                    <hc:AnimationPath.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform />
+                            <SkewTransform />
+                            <RotateTransform Angle="180" />
+                            <TranslateTransform />
+                        </TransformGroup>
+                    </hc:AnimationPath.RenderTransform>
                 </hc:AnimationPath>
             </StackPanel>
+        </hc:TransitioningContentControl>
+
+        <hc:TransitioningContentControl TransitionMode="Right2LeftWithFade">
+
+            <hc:ComboBox
+             x:Name="SelectWebsiteTypeCombo"
+             Height="45"
+             Margin="0,20,75,0"
+             HorizontalAlignment="Right"
+             VerticalAlignment="Top"
+             HorizontalContentAlignment="Right"
+             Background="Transparent"
+             FontSize="20"
+             SelectedIndex="0"
+             Visibility="Visible"
+             >
+                <ComboBoxItem Content="Organization Website" />
+            </hc:ComboBox>
         </hc:TransitioningContentControl>
     </Grid>
 </catel:UserControl>
