--- a/WolvenKit/Views/Shell/RibbonView.xaml
+++ b/WolvenKit/Views/Shell/RibbonView.xaml
@@ -2,7 +2,7 @@
  x:Class="WolvenKit.MVVM.Views.Shell.Editor.RibbonView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- xmlns:HomeView="clr-namespace:WolvenKit.MVVM.Views.Shell.HomePage"
+ xmlns:HomeView="clr-namespace:WolvenKit.Views.HomePage"
  xmlns:catel="http://schemas.catelproject.com"
  xmlns:fluent="urn:fluent-ribbon"
  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
