Simple , Name < Spaces? Just progress

--- a/WolvenKit/Views/HomePage/Pages/EditorSettingsView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/EditorSettingsView.xaml
@@ -12,6 +12,7 @@
          x:Name="Test"
          Width="150"
          HorizontalAlignment="Left"
+         ExpandMode="ShowOne"
          SideBrush="{DynamicResource MahApps.Brushes.Accent}"
          >
 
