--- a/WolvenKit/Views/HomePage/Pages/ToolSettingsView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/ToolSettingsView.xaml
@@ -11,6 +11,7 @@
         <hc:SideMenu
          Width="150"
          HorizontalAlignment="Left"
+         ExpandMode="ShowOne"
          SideBrush="{DynamicResource MahApps.Brushes.Accent}"
          >
 
