--- a/WolvenKit/Views/Wizards/BugReportWizard.xaml
+++ b/WolvenKit/Views/Wizards/BugReportWizard.xaml
@@ -1,11 +1,11 @@
 <catel:UserControl
- x:Class="WolvenKit.MVVM.Views.Components.Wizards.BugReportWizard"
+ x:Class="WolvenKit.Views.Wizards.BugReportWizard"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:catel="http://schemas.catelproject.com"
  xmlns:hc="https://handyorg.github.io/handycontrol"
  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
- xmlns:wiz1="clr-namespace:WolvenKit.MVVM.Views.Components.Wizards.WizardPages.BugReportWizard"
+ xmlns:wiz1="clr-namespace:WolvenKit.Views.Wizards.WizardPages.BugReportWizard"
  IsVisibleChanged="UserControl_IsVisibleChanged"
  >
 
