--- a/WolvenKit/Views/Wizards/FeedbackWizardView.xaml
+++ b/WolvenKit/Views/Wizards/FeedbackWizardView.xaml
@@ -1,11 +1,11 @@
 <catel:UserControl
- x:Class="WolvenKit.MVVM.Views.Components.Wizards.FeedbackWizardView"
+ x:Class="WolvenKit.Views.Wizards.FeedbackWizardView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:catel="http://schemas.catelproject.com"
  xmlns:hc="https://handyorg.github.io/handycontrol"
  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
- xmlns:rv1="clr-namespace:WolvenKit.MVVM.Views.Components.Wizards.WizardPages.FeedbackWizard"
+ xmlns:rv1="clr-namespace:WolvenKit.Views.Wizards.WizardPages.FeedbackWizard"
  IsVisibleChanged="UserControl_IsVisibleChanged"
  >
     <catel:UserControl.Resources>
