--- a/WolvenKit/Views/Wizards/FirstSetupWizard/SelectThemeView.xaml
+++ b/WolvenKit/Views/Wizards/FirstSetupWizard/SelectThemeView.xaml
@@ -1,5 +1,5 @@
 <catel:UserControl
- x:Class="WolvenKit.MVVM.Views.Components.Wizards.WizardPages.FirstSetupWizard.SelectThemeView"
+ x:Class="WolvenKit.Views.Wizards.WizardPages.FirstSetupWizard.SelectThemeView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:av="http://schemas.microsoft.com/expression/blend/2008"
