--- a/WolvenKit/Views/Wizards/InstallerWizardView.xaml
+++ b/WolvenKit/Views/Wizards/InstallerWizardView.xaml
@@ -1,5 +1,5 @@
 <catel:UserControl
- x:Class="WolvenKit.MVVM.Views.Components.Wizards.InstallerWizardView"
+ x:Class="WolvenKit.Views.Wizards.InstallerWizardView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:catel="http://schemas.catelproject.com"
