--- a/WolvenKit/Views/Wizards/ProjectWizardView.xaml
+++ b/WolvenKit/Views/Wizards/ProjectWizardView.xaml
@@ -1,5 +1,5 @@
 <catel:UserControl
- x:Class="WolvenKit.MVVM.Views.Components.Wizards.ProjectWizardView"
+ x:Class="WolvenKit.Views.Wizards.ProjectWizardView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:av="http://schemas.microsoft.com/expression/blend/2008"
