--- a/WolvenKit/Views/Others/ToolControlHostWindowView.xaml
+++ b/WolvenKit/Views/Others/ToolControlHostWindowView.xaml
@@ -1,5 +1,5 @@
 <catel:DataWindow
- x:Class="WolvenKit.MVVM.Views.Others.ToolControlHostWindowView"
+ x:Class="WolvenKit.Views.Others.ToolControlHostWindowView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:catel="http://schemas.catelproject.com"
