--- a/WolvenKit/Views/Shared/OpenFileView.xaml
+++ b/WolvenKit/Views/Shared/OpenFileView.xaml
@@ -1,5 +1,5 @@
 <catel:UserControl
- x:Class="WolvenKit.MVVM.Views.Shell.Backstage.OpenFileView"
+ x:Class="WolvenKit.Views.Shared.OpenFileView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:catel="http://schemas.catelproject.com"
@@ -8,8 +8,8 @@
  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
  xmlns:local1="clr-namespace:WolvenKit.MVVM.Views.Shell.Backstage"
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
- xmlns:orchestra="http://schemas.wildgums.com/orchestra"
- d:DesignHeight="300"
+ xmlns:orchestra="http://schemas.wildgums.com/orchestra" xmlns:local11="clr-namespace:WolvenKit.Views.Shared"
+    d:DesignHeight="300"
  d:DesignWidth="300"
  IsVisibleChanged="UserControl_IsVisibleChanged"
  mc:Ignorable="d"
@@ -51,7 +51,7 @@
                             </StackPanel>
                         </DataTemplate>
                     </orchestra:RibbonBackstageTabItem.HeaderTemplate>
-                    <local1:RecentlyUsedItemsView />
+                    <local11:RecentlyUsedItemsView />
                 </orchestra:RibbonBackstageTabItem>
 
                 <orchestra:RibbonBackstageTabItem HeaderText="Computer" Icon="{StaticResource Fluent.Ribbon.Images.DefaultPlaceholder}">
